--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://gitignore.org
 # Python.gitignore
 
-
+Procfile
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
